--- a/dokumentation/src/abnahme.tex
+++ b/dokumentation/src/abnahme.tex
@@ -1,35 +1,32 @@
 \section{Abnahmephase}
-Nach dem Abschluss der Implementationsphase wurde das Projekt, wie zuvor mit der
-Abteilung für Datenverarbeitung vereinbart sowohl dem Abteilungsleiter im Einzelgespräch,
-als auch der gesamten Abteilung in Form einer Präsentation vorgeführt.
+Nach Abschluss der Implementierungsphase wurde das Projekt, wie zuvor mit der
+Abteilung für Datenverarbeitung abgesprochen, sowohl dem Abteilungsleiter im Einzelgespräch,
+als auch der gesamten Abteilung in Form einer Präsentation, präsentiert.
 
-Der Hauptaugenmerk und die Vorgehensweise war in beiden Fällen jedoch unterschiedlich
-und wird in den folgenden Sektionen genauer erläutert.
+Das Hauptaugenmerk und die Vorgehensweise war in beiden Fällen jedoch unterschiedlich
+und wird in den folgenden Aschnitten erläutert.
 
 \subsection{Code-Flight mit der Abteilungsleitung}
 
-Um die Qualität des Codes zu gewährleisten wurde anstatt einer stillen Abnahme,
-bei dem das Projekt übergeben, vom Auftraggeber überprüft und entweder abgenommen
-oder bemängelt wird, wurde für das Projekt die Abnahme über einen
-Code-Flight\footnote{zu deutsch "Programm-Flug"} festgelegt. Diese einstündige
+Um die Qualität des Codes zu gewährleisten wurde für das Projekt die Abnahme über einen Code-Flight\footnote{zu deutsch \"Programm-Flug"} festgelegt. Diese einstündige
 Vorführung des Codes wurde mit dem Abteilungsleiter Sebastian Freundt im
 Vier-Augen-Gespräch vollzogen und gestaltete sich wie folgt:
 
 \begin{itemize}
     \item Demonstration des Programms über die Kommandozeile, mit Schritt-für-Schritt Erklärung der gewählten Parameter und deren Design-Entscheidung.
     \item Sichtung des Codes, angefangen mit der Hauptroutine.
-    \item Erläuterung der gewählten Datenstrukturen und die Begründung für die Nutzung dieser.
-    \item Limitation des Algorithmus und des CLI Programms.
-    \item Die nächsten, möglichen Schritte zur Verbesserung der Hauptprogramms.
+    \item Erläuterung der gewählten Datenstrukturen und Begründung für die Nutzung dieser.
+    \item Limitation des Algorithmus und des CLI-Programms.
+    \item Weitere Schritte zur Verbesserung der Hauptprogramms.
     \item Mögliche Ansätze zur Verbesserung des Algorithmus.
 \end{itemize}
 
 \subsection{Präsentation des Programms}
 
-Nachdem der Code-Flight mit dem Abteilungsleiter abgeschlossen wurde, wurde ebenfalls
+Nachdem Code-Flight mit dem Abteilungsleiter, wurde ebenfalls
 eine Präsentation für das gesamte Team der Abteilung Datenverarbeitung gehalten.
 Diese beschränkte sich im Inhalt jedoch auf die Grundprinzipien des Algorithmus, sowie
-die Funktion und Nutzung des CLI Programms. Unter anderem wurden verfügbare
-Parameter und maximal-zulässige Dateigrößen erläutert.
+die Funktion und Nutzung des CLI-Programms. Unter anderem wurden verfügbare
+Parameter und maximal zulässige Dateigrößen erläutert.
 
 \subsection{Zwischenstand}
