corrections by hanna

--- a/dokumentation/src/dokumentationsphase.tex
+++ b/dokumentation/src/dokumentationsphase.tex
@@ -1,15 +1,14 @@
 \section{Dokumentation}
 Die Dokumentation ist aufgeteilt in zwei Bestandteile: Die Nutzerdokumentation
-in Form einer CLI Dokumenation, sowie die Entwicklerdokumentation in Form von
+in Form einer CLI-Dokumentation, sowie die Entwicklerdokumentation in Form von
 Dokumentationsblöcken im Quellcode. Die gesamte Dokumentation wurde auf Englisch,
 der Sprache des Unternehmens, verfasst.
 
 \subsection{Nutzerdokumentation}
 Da der Funktionsumfang des Programms recht klein ist, wird auf ein handelsübliches
-Dokument verzichtet. Die Dokumentation findet ausschließlich über die Kommandozeile, über den Aufruf des Programms mit dem Parameter "-h" bzw. "--help", statt.
+Dokument verzichtet. Die Dokumentation findet ausschließlich über die Kommandozeile mit dem Aufruf des Programms unter Zusatz des Hilfe Parameters ("\-\-help" bzw. "\-h") statt.
 Dieser Aufrauf erzeugt eine kurze Beschreibung des Programms und dessen Parameter.
 
 \subsection{Entwicklerdokumentation}
-Die Entwicklerdokumentation ist etwas weitreichender gestaltet, jedoch bewusst minimalistisch gehalten. Die Dokumentation des Codes findet über einen
-Dokumentationsblock über der Signatur jeder Funktion statt. Dieser Block beinhaltet
-eine kurze Beschreibung, sowie die Namen und erwartete Datentypen der Funktionsparameter.
+Die Entwicklerdokumentation des Codes findet über einen
+Dokumentationsblock oberhalb der Signatur jeder Funktion statt. Dieser Block beinhaltet eine kurze Beschreibung der funktionsweise der Routine, sowie die Namen und erwarteten Datentypen der Funktionsparameter. Die Formatierung ist ReStructuredText( kurz ReST), und kann mit Hilfe von Dokumentationstools ausgelesen und später als eine lokale Webseite mit automatisch generierten Verlinkungen ausgegeben werden.
