--- a/dokumentation/src/intro.tex
+++ b/dokumentation/src/intro.tex
@@ -1,9 +1,9 @@
 \section{Einleitung}
 \subsection{Projektumfeld}
-Die GA Financial Solutions GmbH ist ein 5-köpfiger Finanzdienstleister im
-Herzen Berlins. Die Firma spezialisiert sich auf computer-gestütztes Handeln
-von Futures, Aktien und anderen Derivaten. Direkte Kunden gibt es zur Zeit
-nicht; die Firma finanziert sich durch Investoren und den Gewinn ihrer
+Die GA Financial Solutions GmbH ist ein fünfköpfiger Finanzdienstleister im
+Herzen Berlins, welcher sich auf computer-gestütztes Handeln
+von Futures, Aktien und anderen Derivaten spezialisiert hat. Direkte Kunden gibt es zur Zeit
+nicht und die Firma finanziert sich durch Investoren und den Gewinn ihrer
 Strategien. Die Rolle des Auftraggebers und Kunden übernimmt im Rahmen des
 Projektes Sebastian Freundt, stellvertretend für die Abteilung Datenverarbeitung.\par
 
@@ -16,8 +16,8 @@ Strings ausgibt.\par
 Die GA Financial Solutions handelt Wertpapiere aller Art auf eigene
 Rechnung.  Dabei ist es marktüblich, dass Referenzdaten, Preisdaten
 und Ausführungen von unterschiedlichen Dienstleistern bezogen werden.
-So stehen ca. 223 Mio. handelbaren Wertpapieren rund 500000 mögliche
-Herausgeber an ca. 1200 Börsen weltweit gegenüber.  Jede einzelne
+So stehen ca. 223 Mio. handelbaren Wertpapieren rund 500.000 mögliche
+Herausgeber an ca. 1.200 Börsen weltweit gegenüber.  Jede einzelne
 Börse bzw. jeder einzelne Makler im Markt unterstützt jedoch nur
 einen Bruchteil der Papiere.\par
 
@@ -48,29 +48,24 @@ anderen Aufgaben zu geteilt werden können.\par
 Das Programm wird als Kommandozeilenprogramm angeboten, welches
 Daten per Pipe oder unter Angabe eines Dateipfads annimmt und diese im .csv 
 Format über STDOUT ausgibt. Dieser Ansatz der Resultatausgabe wird explizit gewünscht, 
-da sich das Programm so mühelos in die bisherige Toolchain der Firma einbinden lässt.
-Die Nutzung dieses Tools findet hierbei vor Allem in der Abteilung
-Datenverarbeitung statt.\par
+da sich das Programm auf diese Art mühelos in die bisherige Toolchain der Firma einbinden lässt.
+Das Programm wird vor Allem in der Abteilung für Datenverarbeitung zum Einsatz kommen.\par
 
 Als technische Schnittstelle ist insbesondere das Datensammelsystem zu nennen,
 welches täglich unsere Datenbanken mit neuen Datensätzen füttert. Die Ergebnisse
-dieses Systems liegen im CSV format auf unseren Servern, bevor sie am Ende des
-Tages komprimiert werden. Jedoch findet keine direkte Anbindung des zu entwickelnden 
-Projekts an das Datensammelsystem statt. Es ist nur wichtig, dass das Programm 
-.CSV Dateien unterstützt, welche vom System bereitgestellt werden.\par
+dieses Systems liegen im CSV-Format auf unseren Servern, bevor sie am Ende des
+Tages komprimiert werden.Eine direkte Anbindung des zu entwickelnden Projekts an das Datensammelsystem findet nicht statt. Wichtig ist allerdings, dass das Programm .CSV-Dateien unterstützt, welche vom System bereitgestellt werden.\par
 
 Mittel und Genehmigung des Projekts stellt die Abteilung Datenverarbeitung,
 vertreten durch Sebastian Freundt.\par
 
 \subsection{Projektabgrenzung}
-Während mehrere hundert-tausend Symbole miteinander verglichen und die
-effiziente Gestaltung dieser Vergleiche Hauptziel des Projektes ist, sind folgende
-Themen explizit nicht Teil der Aufgabe:
+Während die Hauptziele des Projekts das Vergleichen mehrerer hunderttausend Symbole und die effiziente Gestaltung dieser Vergleiche ist, sind folgende Themen explizit nicht Teil der Aufgabe:
 
 \begin{itemize}
     \item Datenintegrität - Die Überprüfung des Datenformats ist nicht Teil unseres Aufgabenfeldes.
-    \item Datenverifizierung - Die Prüfung ob \textbf{eingehende} Daten korrekt sind, fällt nicht in unser Aufgabenfeld.
-    \item Datenbereitstellung - Die Bereitstellung der verarbeiteten Daten (z.B. als Datenbank o.Ä.) ist ebenfalls nicht teil des Projekts.
+    \item Datenverifizierung - Die Prüfung ob \textbf{eingehende} Daten korrekt sind, fällt nicht in das Aufgabenfeld.
+    \item Datenbereitstellung - Die Bereitstellung der verarbeiteten Daten (z.B. als Datenbank o.Ä.) ist ebenfalls nicht Teil des Projekts.
 \end{itemize}
 \clearpage
 
