dummy text added

--- a/dokumentation/src/postmortem.tex
+++ b/dokumentation/src/postmortem.tex
@@ -1,16 +1,16 @@
 \section{Fazit}
-läuft.
+ Kommt noch
 
 \subsection{Soll- /Ist-Vergleich}
-Jeschaft: 80%
-Soll: 100%
+Kommt noch
 
 \subsection{Post Mortem}
-War janz jut, allet.
+Kommt noch
 
 \subsection{Ausblick}
+Kommt noch
+
 Weitere Schritte:\\
 Python einbindung\\
 Optimierung des Algorithmusfilters\\
 Optimierung des Rechenaufwands des Algorithmus\\
-\clearpage
