rotated tables, added folder structure iamge

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -19,12 +19,20 @@
 
 }
 
+
 \subsubsection{Aktivitätsdiagramm: Programmlogik}
 \begin{figure}[!htp]
 	\caption{Programmlogik als UML Aktivitätsdiagramm}
 	\label{fig:programmlogik}
 	\includegraphics[width=\textwidth]{algo}
 	\centering
+\end{figure}
+
+\subsubsection{Projektstruktur}
+\begin{figure}[!htp]
+	\label{fig:folderstruct}
+	\caption{Übersicht der Projektstruktur.}
+	\includegraphics[width=\textwidth]{folder_struct}
 \end{figure}
 
 \subsubsection{Analyse: Verteilung der Qgramme}
@@ -47,7 +55,7 @@
 
 \subsection{Tabellen}
 \subsubsection{Projektkosten}
-\begin{sidewaystable}[!htp]
+\begin{sidewaystable}
 	\centering
 	\caption{Projektkosten}
 	\label{tabelle:projektkosten}
@@ -65,7 +73,7 @@
 \end{sidewaystable}
 
 \subsubsection{Nutzwertanalyse: Projektentwicklung}
-\begin{sidewaystable}[!htp]
+\begin{sidewaystable}
 	\centering
 	\caption{Nutzwertanalyse Projektentwicklung}
 	\label{nwa:projektentwicklung}
@@ -86,7 +94,7 @@
 
 \subsubsection{Nutzwertanalyse: Programmiersprachen}
 
-\begin{sidewaystable}[!htp]
+\begin{sidewaystable}
 	\centering
 	\caption{Nutzwertanalyse der Programmiersprachen}
 	\label{nwa:sprachen}
@@ -108,7 +116,7 @@
 \end{sidewaystable}
 
 \subsubsection{Nutzwertanalyse: Datentyp der Menge Q}
-\begin{sidewaystable}[!htp]
+\begin{sidewaystable}
 	\centering
 	\caption{Nutzwertanalyse der Datentypen für Q}
 	\label{nwa:datentyp}
