removed illegal parameter

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -59,7 +59,7 @@
 	\centering
 	\caption{Projektkosten}
 	\label{tabelle:projektkosten}
-	\begin{tabular}{l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}}
+	\begin{tabular}{llllll}
 		\rowcolor[HTML]{9698ED}
 		{\color[HTML]{FFFFFF} \textbf{Vorgang}} & {\color[HTML]{FFFFFF} \textbf{Mitarbeiter}} & {\color[HTML]{FFFFFF} \textbf{Stunden}} & {\color[HTML]{FFFFFF} \textbf{Personal}} & {\color[HTML]{FFFFFF} \textbf{Ressources}} & {\color[HTML]{FFFFFF} \textbf{Gesamt}} \\
 		Entwicklungskosten                      & 1                                           & 70                                      & 385.00 €                                 & 1,295.00 €                                 & 1,680.00 €                             \\
@@ -77,7 +77,7 @@
 	\centering
 	\caption{Nutzwertanalyse Projektentwicklung}
 	\label{nwa:projektentwicklung}
-	\begin{tabular}{l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}}
+	\begin{tabular}{llllllllll}
 		\rowcolor[HTML]{9698ED}
 		{\color[HTML]{FFFFFF} \textbf{Kriterien}} & {\color[HTML]{FFFFFF} \textbf{Gewicht}} & {\color[HTML]{FFFFFF} \textbf{Externe Entwicklung}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Interne Entwicklung}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Dedizierter 12-Kerner}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Cluster}}   & {\color[HTML]{FFFFFF} \textbf{}}       \\
 		\rowcolor[HTML]{9698ED}
@@ -98,7 +98,7 @@
 	\centering
 	\caption{Nutzwertanalyse der Programmiersprachen}
 	\label{nwa:sprachen}
-	\begin{tabular}{l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}}
+	\begin{tabular}{llllllllll}
 		\rowcolor[HTML]{9698ED}
 		{\color[HTML]{FFFFFF} \textbf{Kriterien}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gewicht}}} & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{C}}}                                                                                              & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{C++}}}                                                                                            & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Java}}}                                                                                           & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Haskell}}}                                                                                        \\
 		\rowcolor[HTML]{9698ED}
@@ -120,7 +120,7 @@
 	\centering
 	\caption{Nutzwertanalyse der Datentypen für Q}
 	\label{nwa:datentyp}
-	\begin{tabular}{l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}}
+	\begin{tabular}{llllll}
 		\rowcolor[HTML]{9698ED}
 		\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} }                                     & \cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} }                                   & \multicolumn{2}{l}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Hashmap}}} & \multicolumn{2}{l}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Binärbaum}}} \\
 		\rowcolor[HTML]{9698ED}
