--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -17,7 +17,7 @@
 
 
 
-}
+
 
 
 \subsubsection{Aktivitätsdiagramm: Programmlogik}
@@ -85,7 +85,7 @@
 		Projektkosten                             & 45.00\%                                 & 4                                                   & 1.8                                    & 5                                                   & 2.25                                   & 4                                                     & 1.8                                    & 3                                         & 1.35                                   \\
 		\rowcolor[HTML]{BBDAFF}
 		Nachhaltigkeit                            & 15.00\%                                 & 4                                                   & 0.6                                    & 4                                                   & 0.6                                    & 1                                                     & 0.15                                   & 1                                         & 0.15                                   \\
-		Flexibilit채t                              & 5.00\%                                  & 3                                                   & 0.15                                   & 5                                                   & 0.25                                   & 4                                                     & 0.2                                    & 4                                         & 0.2                                    \\
+		Flexibilität                              & 5.00\%                                  & 3                                                   & 0.15                                   & 5                                                   & 0.25                                   & 4                                                     & 0.2                                    & 4                                         & 0.2                                    \\
 		\rowcolor[HTML]{BBDAFF}
 		Unterhaltskosten                          & 35.00\%                                 & 4                                                   & 1.4                                    & 4                                                   & 1.4                                    & 2                                                     & 0.7                                    & 1                                         & 0.35                                   \\
 		\textbf{Gesamt}                           & \textbf{100.00\%}                       & \textbf{}                                           & \textbf{3.95}                          & \textbf{}                                           & \textbf{4.5}                           & \textbf{}                                             & \textbf{2.85}                          & \textbf{}                                 & \textbf{2.05}
