--- a/dokumentation/src/entwurfsphase.tex
+++ b/dokumentation/src/entwurfsphase.tex
@@ -14,7 +14,7 @@ Nutzwertanalyse mit der Sprache C verglichen. Die wichtigste Rolle spielten hier
     \item \textbf{Systemische Vorraussetzungen} - Anzahl und Aufwand der Vorraussetzungen, um die Sprache zu nutzen
 \end{itemize}
 
-Die Ergebnisse dieses Vergleichs wurden in der Nutzwertanalyse \ref{nwa_sprachen} präsentiert. 
+Die Ergebnisse dieses Vergleichs wurden in der Nutzwertanalyse \ref{nwa:sprachen} präsentiert.
 Sie ist dem Anhang dieses Dokumentes beigefügt.\par
 Letztendlich wurde an der urprünglichen Entscheidung, die Sprache C zu nutzen, festgehalten.
 
