added hyperref package

--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -11,6 +11,7 @@
 \graphicspath{ {./images/} }
 \DeclareGraphicsExtensions{.png, .eps, .pdf}
 \usepackage{palatino}
+\usepackage{hyperref}
 \usepackage{inputenc}
 \usepackage{fancyhdr}
 \usepackage{booktabs}
